email sudah bisaaaaaaaaaaa

--- a/E-Commerce_MultiTenant/Views/Home/Login.cshtml
+++ b/E-Commerce_MultiTenant/Views/Home/Login.cshtml
@@ -47,6 +47,8 @@
                 <div>
                     <a onclick="location.href='@Url.Action("Indexku", "Home")'" class="btn btn-warning btn-sm">Kembali ke beranda</a>
                     <input type="submit" value="Log in" class="btn btn-success" />
+                    <br />
+                    <p style="font-size:12px;padding-top:10px">Belum punya akun? Buat <a onclick="location.href='@Url.Action("Create", "Home")'">di sini</a></p>
                 </div>
                 <br />
 
