--- a/E-Commerce_MultiTenant/Views/ShoppingCart/Invoice.cshtml
+++ b/E-Commerce_MultiTenant/Views/ShoppingCart/Invoice.cshtml
@@ -6,7 +6,7 @@
 @{
     Layout = "~/Views/Shared/_LayoutNoWhiteBar.cshtml";
 }
-<div class="container" style="margin-top:5%">
+<div class="container" id="invoiceku" style="margin-top:5%">
     <h2 class="text-center">I N V O I C E</h2>
     <hr />
     <div class="row" style="margin-left:50px">
@@ -75,7 +75,7 @@
                         Pesanan
                     </td>
                     <td align="left">
-                        diambil di toko 
+                        diambil di toko
                     </td>
                 }
 
@@ -83,7 +83,7 @@
         </table>
     </div>
     <br />
-    <table class="table table-striped">
+    <table id="tablepesanan" class="table table-striped">
         <tr style="background-color:#e5e5e5">
             <th>
                 Nama Produk
@@ -145,6 +145,30 @@
     </div>
     <br />
     <div class="text-center">
-        <button class="btn btn-primary" onclick="javascript:window.print()">Cetak</button>
+        <button class="btn btn-primary" id="buttonsend" onclick="javascript:window.print()">Cetak</button>
     </div>
 </div>
+<script type="text/javascript">
+        $(function () {
+            //send email button click event
+            $("#buttonsend").click(function () {
+                //get the table content
+                var tablevalue = "<table>" + $("#tablepesanan").html() + "</table>";
+                //using Ajax to call the action method
+                $.ajax({
+                    url: '@Url.Action("SendMailToUser", "ShoppingCart")', //
+                    dataType: "json",
+                    data: JSON.stringify({ table: tablevalue }),
+                    type: "POST",
+                    contentType: "application/json; charset=utf-8",
+                    success: function (result) {
+                        alert("success");
+                    },
+                    error: function (xhr) {
+                        alert("error");
+                    }
+                });
+                return false;
+            });
+        });
+</script>
