--- a/Pendaftaran_Tenant/Views/Penyewa/IndexProdukLengkap.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexProdukLengkap.cshtml
@@ -34,7 +34,9 @@
 @Html.Raw(TempData["Pesan"])
 <div class="row">
 
-    @{ var tambahan = "";};
+    @{ var tambahan = "";
+        var bahan = "";
+        var sablon = "";};
     @foreach (var item in Model.GroupBy(x => x.nama_produk).Select(y => y.First()).ToList())
     {
         //if (item.nama_produk != produk)
@@ -50,7 +52,7 @@
 
                 <tr style="background-color:#ededed">
                     <th style="text-align:center">Bahan</th>
-                    <th style="text-align:center">Sablon</th>
+
                     <th style="text-align:center">Harga</th>
 
 
@@ -60,9 +62,44 @@
                     <tr>
                         @if (item2.nama_produk == item.nama_produk)
                         {
+                            if (bahan != item2.nama_bahan)
+                            {
                             <td style="text-align:center">@item2.nama_bahan</td>
-                            <td style="text-align:center">@item2.nama_sablon</td>
-                            <td style="text-align:center">@item2.harga</td>
+
+                            <td style="text-align:center">@item2.harga_bahan</td>
+                                bahan = item2.nama_bahan;
+                            }
+                            else
+                            {
+
+                            }
+
+                        }
+                    </tr>
+                }
+            </table>
+            <table class="table">
+
+                <tr style="background-color:#ededed">
+                    <th style="text-align:center">Sablon</th>
+
+                    <th style="text-align:center">Harga</th>
+
+
+                </tr>
+                @foreach (var item4 in Model)
+                {
+                    <tr>
+                        @if (item4.nama_produk == item.nama_produk)
+                        {
+                            if (sablon != item4.nama_sablon)
+                            {
+                            <td style="text-align:center">@item4.nama_sablon</td>
+
+                            <td style="text-align:center">@item4.harga_sablon</td>
+                                sablon = item4.nama_sablon;
+                            }
+                            else { }
 
                         }
                     </tr>
@@ -82,16 +119,16 @@
                     <tr>
                         @if (item3.nama_produk == item.nama_produk)
                         {
-                            if(tambahan != item3.nama_tambahan)
-                            { 
-                            <td style="text-align:center">@item3.nama_tambahan</td>
-                            <td style="text-align:center">@item3.harga_tambahan</td>
+                            if (tambahan != item3.nama_tambahan)
+                            {
+                                <td style="text-align:center">@item3.nama_tambahan</td>
+                                <td style="text-align:center">@item3.harga_tambahan</td>
                                 tambahan = item3.nama_tambahan;
                             }
                             else { };
 
                         }
-                        
+
                     </tr>
                 }
             </table>
