--- a/Pendaftaran_Tenant/Views/Home/Index2.cshtml
+++ b/Pendaftaran_Tenant/Views/Home/Index2.cshtml
@@ -28,7 +28,7 @@
         <div class="col-md-4 col-xs-4">
             <div class="thumbnail clearfix text-center">
                 <span class="glyphicon glyphicon-cog" style="font-size:50px"></span>
-                <p style="font-size:15px">Lihat data harga per produk</p>
+                <p style="font-size:15px">Lihat data desain web</p>
                 <p><a onclick="location.href='@Url.Action("IndexViewHargaFix", "Penyewa")'" class="btn btn-success btn-lg">Lihat harga</a></p>
 
             </div>
