--- a/Pendaftaran_Tenant/Views/Penyewa/IndexCarausel.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexCarausel.cshtml
@@ -16,6 +16,10 @@
             <div class="thumbnail">
                 <img src="~/Content/Images/@item.gambar" style="min-height:150px;height:150px;" />
             </div>
+           
+            <div style="margin-top:15px" class="text-center">
+                <input type="button" value="Hapus" onclick="location.href='@Url.Action("DeleteCarausel", "Penyewa")?id=' + @item.id_carausel" class="btn btn-danger btn-sm" />
+            </div>
         </div>
     }
 </div>
