--- a/E-Commerce_MultiTenant/Views/Produk/CalculatePrice.cshtml
+++ b/E-Commerce_MultiTenant/Views/Produk/CalculatePrice.cshtml
@@ -47,7 +47,7 @@
                 {
                     <tr>
                         <td align="right" style="padding-right:40px">
-                            Ukuran anak :
+                            Ukuran Anak :
                         </td>
                         <td style="padding-right:40px">
                             @ViewBag.anak &nbsp;
@@ -59,7 +59,7 @@
                 {
                     <tr>
                         <td align="right" style="padding-right:40px">
-                            Ukuran xs :
+                            Ukuran XS :
                         </td>
                         <td style="padding-right:40px">
                             @ViewBag.xs &nbsp;
@@ -71,7 +71,7 @@
                 {
                     <tr>
                         <td align="right" style="padding-right:40px">
-                            Ukuran s :
+                            Ukuran S :
                         </td>
                         <td style="padding-right:40px">
                             @ViewBag.s &nbsp;
@@ -83,7 +83,7 @@
                 {
                     <tr>
                         <td align="right" style="padding-right:40px">
-                            Ukuran m :
+                            Ukuran M :
                         </td>
                         <td style="padding-right:40px">
                             @ViewBag.m &nbsp;
@@ -95,7 +95,7 @@
                 {
                     <tr>
                         <td align="right" style="padding-right:40px">
-                            Ukuran l :
+                            Ukuran L :
                         </td>
                         <td style="padding-right:40px">
                             @ViewBag.l &nbsp;
@@ -107,7 +107,7 @@
                 {
                     <tr>
                         <td align="right" style="padding-right:40px">
-                            Ukuran xl :
+                            Ukuran XL :
                         </td>
                         <td style="padding-right:40px">
                             @ViewBag.xl &nbsp;
@@ -119,7 +119,7 @@
                 {
                     <tr>
                         <td align="right" style="padding-right:40px">
-                            Ukuran xxl :
+                            Ukuran XXL :
                         </td>
                         <td style="padding-right:40px">
                             @ViewBag.xxl &nbsp;
@@ -131,7 +131,7 @@
                 {
                     <tr>
                         <td align="right" style="padding-right:40px">
-                            Ukuran xxxl :
+                            Ukuran XXXL :
                         </td>
                         <td style="padding-right:40px">
                             @ViewBag.xxxl &nbsp;
@@ -143,7 +143,7 @@
                 {
                     <tr>
                         <td align="right" style="padding-right:40px">
-                            Ukuran 4xl :
+                            Ukuran 4XL :
                         </td>
                         <td style="padding-right:40px">
                             @ViewBag.empatxl &nbsp;
@@ -155,7 +155,7 @@
                 {
                     <tr>
                         <td align="right" style="padding-right:40px">
-                            Ukuran 5xl :
+                            Ukuran 5XL :
                         </td>
                         <td style="padding-right:40px">
                             @ViewBag.limexl &nbsp;
@@ -271,6 +271,10 @@
                     <th align="right">Rp @String.Format("{0:n0}", Decimal.Parse(@ViewBag.Totalhargaall))</th>
                 </tr>
             </table>
+            <br />
+            <p style="font-size:11px;color:red">*Harga di atas merupakan <b>harga sementara</b>, belum termasuk diskon serta perhitungan harga desain dan warna</p>
+            <p style="font-size:11px;color:red">Harga fix akan diinfokan oleh konveksi melalui e-mail pembeli yang terdaftar</p>
+            <p style="font-size:11px;color:red">Harga fix bisa lebih atau kurang dari harga sementara</p>
             <br />
             <div class="text-center">
                 <button class="btn btn-primary" onclick="history.go(-1);">Ubah Data Pesanan</button>
